# scgen

./: CMakeLists.txt  Makefile  README.md
jsoncpp/: CMakeLists.txt  json_value.cpp
src/: CMakeLists.txt  main.cpp  scgen.cpp  scgen.h
